[package]
name = "database"
version = "0.1.0"
authors = ["elsirion <elsirion@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = "1.0.118"
sled = "0.34.6"
thiserror = "1.0.23"
tracing ="0.1.22"

[dev-dependencies]
tempdir = "0.3.7"