[package]
name = "devimint"
version = "0.3.4-rc.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "devimint"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
axum = { version = "0.7.4", features = ["tracing"] }
bitcoincore-rpc = "0.16.0"
clap = { version = "4.5.2", features = ["derive", "env", "std", "help", "usage", "error-context", "suggestions"], default-features = false }
cln-rpc = { workspace = true }
fedimint-aead = { path = "../crypto/aead" }
fedimintd = { path = "../fedimintd" }
fedimint-core  = { path = "../fedimint-core" }
fedimint-cli  = { path = "../fedimint-cli" }
fedimint-client  = { path = "../fedimint-client" }
fedimint-bitcoind = { path = "../fedimint-bitcoind" }
fedimint-logging = { path = "../fedimint-logging" }
fedimint-mint-server = { path = "../modules/fedimint-mint-server" }
fedimint-ln-server = { path = "../modules/fedimint-ln-server" }
fedimint-wallet-server = { path = "../modules/fedimint-wallet-server" }
fedimint-unknown-server = { path = "../modules/fedimint-unknown-server" }
fedimint-meta-server = { path = "../modules/fedimint-meta-server" }
fedimint-wallet-client = { path = "../modules/fedimint-wallet-client" }
fedimint-server = { path = "../fedimint-server" }
fedimint-testing = { path = "../fedimint-testing" }
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.4.0"
ln-gateway = { package = "fedimint-ln-gateway", path = "../gateway/ln-gateway" }
nix = { version = "0.28.0", features = ["signal"] }
rand = "0.8.5"
semver = "1.0.22"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tonic_lnd = { workspace = true }
tower-http = { version = "0.5.2", features = ["cors", "auth"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.197"
url = "2.5.0"
fedimint-portalloc = { path = "../utils/portalloc" }
fs-lock = "0.1.3"

[build-dependencies]
fedimint-build = { version = "=0.3.4-rc.0", path = "../fedimint-build" }
