[package]
name = "devimint"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "devimint is a library useful for setting up a local environment to run the fedimint stack"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "devimint"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["tracing"] }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
cln-rpc = { workspace = true }
esplora-client = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bitcoind = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-gateway-common = { workspace = true }
fedimint-lightning = { workspace = true }
fedimint-ln-client = { workspace = true, features = ["cli"] }
fedimint-ln-server = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-lnv2-server = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-meta-server = { workspace = true }
fedimint-mint-common = { workspace = true }
fedimint-mint-server = { workspace = true }
fedimint-portalloc = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing = { workspace = true, features = ["tor"] }
fedimint-unknown-server = { workspace = true }
fedimint-wallet-client = { workspace = true, features = ["cli"] }
fedimint-wallet-server = { workspace = true }
fedimintd = { workspace = true }
fs-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh-base = { workspace = true, features = ["ticket"] }
itertools = { workspace = true }
nix = { version = "0.29.0", features = ["signal"] }
rand = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tonic_lnd = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors", "auth"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
