[package]
authors = { workspace = true }
description = "devimint is a library useful for setting up a local environment to run the fedimint stack"
edition = { workspace = true }
license = { workspace = true }
name = "devimint"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "devimint"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["tracing"] }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
esplora-client = { workspace = true }
fedimint-aead = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-gateway-common = { workspace = true }
fedimint-ln-client = { workspace = true, features = ["cli"] }
fedimint-ln-server = { workspace = true }
fedimint-lnv2-client = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-mint-common = { workspace = true }
fedimint-portalloc = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing-core = { workspace = true }
fedimint-wallet-client = { workspace = true, features = ["cli"] }
fedimint-walletv2-client = { workspace = true }
fedimint-walletv2-server = { workspace = true }
fedimintd-envs = { workspace = true }
fs-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh-base = { workspace = true, features = [
    "ticket",
], default-features = false }
itertools = { workspace = true }
nix = { workspace = true, features = ["signal"] }
rand = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-rustls = { workspace = true }
tonic_lnd = { workspace = true }
tower-http = { workspace = true, features = ["cors", "auth"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
