[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-docs"
publish = false
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "fedimint_docs"
path = "lib.rs"

[lints]
workspace = true
