[package]
name = "fedimint-api-client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "fedimint-api-client provides common code used by client."
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[features]
tor = [
  "dep:strum",
  "dep:curve25519-dalek",
  "arti-client/tokio",
  "arti-client/rustls",
  "arti-client/onion-service-client",
]

[lib]
name = "fedimint_api_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true, default-features = false }
iroh-base = { workspace = true, default-features = false, features = [
  "ticket",
] }
itertools = { workspace = true }
jsonrpsee-core = { version = "0.24.9" }
jsonrpsee-types = { version = "0.24.8" }
lru = "0.13.0"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
z32 = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonrpsee-ws-client = { version = "0.24.9", features = [
  "tls",
], default-features = false }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
  "logging",
  "tls12",
  "ring",
] }
webpki-roots = { version = "0.26.8" }
rustls-pki-types = { version = "1.11.0" }
arti-client = { version = "0.20.0", default-features = false, package = "fedimint-arti-client", optional = true }
strum = { workspace = true, optional = true }
# We need to pin this arti's `curve25519-dalek` dependency, due to `https://rustsec.org/advisories/RUSTSEC-2024-0344` vulnerability
# It's been updated by https://gitlab.torproject.org/tpo/core/arti/-/merge_requests/2211, should be removed in next release.
curve25519-dalek = { version = ">=4.1.3", optional = true }
iroh = { workspace = true, default-features = false, features = [
  "discovery-pkarr-dht",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
jsonrpsee-wasm-client = "0.24.9"
