[package]
name = "fedimint-api-client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "fedimint-api-client provides common code used by client."
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[features]
tor = [
  "dep:strum",
  "dep:curve25519-dalek",
  "arti-client/tokio",
  "arti-client/rustls",
  "arti-client/onion-service-client",
]

[lib]
name = "fedimint_api_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true, default-features = false }
iroh-base = { workspace = true, default-features = false, features = [
  "ticket",
] }
itertools = { workspace = true }
jsonrpsee-core = { workspace = true }
jsonrpsee-types = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
z32 = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonrpsee-ws-client = { workspace = true, features = ["tls"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
  "logging",
  "tls12",
  "ring",
] }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
arti-client = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, optional = true }
iroh = { workspace = true, default-features = false, features = [
  "discovery-pkarr-dht",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
jsonrpsee-wasm-client = { workspace = true }
