[package]
authors = { workspace = true }
description = "fedimint-api-client provides common code used by client."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-api-client"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[features]
tor = ["fedimint-connectors/tor"]

[lib]
name = "fedimint_api_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-metrics = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jsonrpsee-core = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[lints]
workspace = true
