[package]
name = "fedimint-api"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-api provides the common serialization and database representations for communication between crates"
license = "MIT"

[lib]
name = "fedimint_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
async-trait = { version = "0.1", default-features = false }
bincode = { version = "1.3.1", default-features = false }
bitcoin = { version = "0.29.2", default-features = false }
bitcoin_hashes = { version = "0.11", default-features = false }
futures = { version = "0.3.25" }
fedimint-derive = { path = "../fedimint-derive", default-features = false }
hbbft = { git = "https://github.com/jkitman/hbbft", branch = "upgrade-threshold-crypto-libs", default-features = false }
lightning-invoice = { version = "0.21.0", features = [ "std" ], default-features = false }
miniscript = { version = "7.0.0", git = "https://github.com/rust-bitcoin/rust-miniscript/", rev = "2f1535e470c75fad85dbad8633986aae36a89a92", features = [ "compiler", "serde", "hashbrown" ], default-features = false }
rand = "0.8.5"
secp256k1-zkp = { version = "0.7.0", features = [ "global-context" ], default-features = false }
serde = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.91", features = [ "std" ], default-features = false }
tbs = { path = "../crypto/tbs", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
threshold_crypto = { git = "https://github.com/jkitman/threshold_crypto", branch = "upgrade-threshold-crypto-libs", default-features = false }
tracing = { version = "0.1.37" }
url = { version = "2.3.1", features = ["serde"] }

[target.'cfg(target_family="wasm")'.dependencies]
async-lock = "2.6"
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.8", features = [ "js" ] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
wasm-bindgen-futures = "0.4.33"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.24.2", features = ["full"] }

[dev-dependencies]
test-log = { version = "0.2", features = [ "trace" ], default-features = false }
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
