[package]
name = "fedimint-api"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-api provides the common serialization and database representations for communication between crates"
license = "MIT"

[lib]
name = "fedimint_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
bincode = "1.3.1"
bitcoin = { version = "0.29.2", features = [ "rand", "serde" ] }
bitcoin_hashes = { version = "0.11", features = ["serde"] }
erased-serde = "0.3"
futures = "0.3.24"
lightning-invoice = "0.21.0"
fedimint-derive = { path = "../fedimint-derive" }
hbbft = { git = "https://github.com/jkitman/hbbft", branch = "upgrade-threshold-crypto-libs" }
rand = "0.8.5"
miniscript = { version = "7.0.0", git = "https://github.com/rust-bitcoin/rust-miniscript/", rev = "2f1535e470c75fad85dbad8633986aae36a89a92", features = [ "compiler", "serde" ] }
secp256k1-zkp = { version = "0.7.0", features = [ "use-serde", "bitcoin_hashes", "global-context" ] }
serde = { version = "1.0.149", features = [ "derive" ] }
serde_json = "1.0.91"
tbs = { path = "../crypto/tbs"}
thiserror = "1.0.37"
threshold_crypto = { git = "https://github.com/jkitman/threshold_crypto", branch = "upgrade-threshold-crypto-libs" }
tracing ="0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[target.'cfg(target_family="wasm")'.dependencies]
async-lock = "2.6"
# getrandom is transitive dependency of rand
# on wasm, we need to enable the js backend
# see https://docs.rs/getrandom/latest/getrandom/#indirect-dependencies and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.8", features = [ "js" ] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.61"

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
test-log = { version = "0.2", features = [ "trace" ], default-features = false }
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
