[package]
name = "fedimint-atomic-broadcast"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph-bft = { version = "0.20.5", default-features = false }
anyhow = "1.0.71"
async-channel = "1.8.0"
async-trait = "0.1.73"
serde = { version = "1.0.149", features = [ "derive" ] }
bitcoin = "0.30.0"
bitcoin_hashes = "0.12.0"
fedimint-core = { path = "../fedimint-core" }
futures = "0.3.28"
parity-scale-codec = "3.5.0"
secp256k1-zkp = { version = "0.7.0", features = [ "global-context", "bitcoin_hashes" ] }
tokio = "1.28.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
