[package]
name = "fedimint-bin-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fedimint-bin-tests"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
bitcoincore-rpc = "0.16.0"
clap = { version = "4.1.6", features = ["derive", "std", "help", "usage", "error-context", "suggestions"], default-features = false }
cln-rpc = "0.1.1"
fedimint-core  = { path = "../fedimint-core" }
fedimint-client  = { path = "../fedimint-client" }
fedimint-bitcoind = { path = "../fedimint-bitcoind", features = ["bitcoincore-rpc"] }
fedimint-ln-client = { path = "../modules/fedimint-ln-client" }
fedimint-logging = { path = "../fedimint-logging" }
fedimint-wallet-client = { path = "../modules/fedimint-wallet-client" }
fedimint-client-legacy = { path = "../fedimint-client-legacy" }
nix = { version = "0.26.2", features = ["signal"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tonic_lnd = { git = "https://github.com/fedimint/tonic_lnd", branch="lnd-client-features", features = ["lightningrpc", "routerrpc"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = "1.0.159"
