[package]
name = "fedimint-bip39"
version = { workspace = true }
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Allows using bip39 mnemonic phrases to generate fedimint client keys"
repository = "https://github.com/fedimint/fedimint"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_bip39"
path = "./src/lib.rs"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
rand = { workspace = true }
