[package]
name = "fedimint-bip39"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "Allows using bip39 mnemonic phrases to generate fedimint client keys"
repository = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_bip39"
path = "./src/lib.rs"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
rand = { workspace = true }
