[package]
description = "Allows using bip39 mnemonic phrases to generate fedimint client keys"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-bip39"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_bip39"
path = "./src/lib.rs"

[dependencies]
bip39 = { workspace = true, features = ["rand"] }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
