[package]
name = "fedimint-bitcoind"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Bitcoin Core connectivity used by Fedimint"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_bitcoind"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
esplora-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
tracing = { workspace = true }
