[package]
authors = { workspace = true }
description = "Bitcoin Core connectivity used by Fedimint"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-bitcoind"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
bitcoincore = ["bitcoincore-rpc"]
default = []

[lib]
name = "fedimint_bitcoind"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true, optional = true }
esplora-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-metrics = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
