[package]
name = "fedimint-build"
version = {workspace = true}
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint build script utilities for including git version information in builds"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/fedimint/fedimint"

[lib]
name = "fedimint_build"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
