[package]
name = "fedimint-build"
version = "0.3.4-rc.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint build script utilities for including git version information in builds"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/fedimint/fedimint"

[lib]
name = "fedimint_build"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.114"
