[package]
authors = { workspace = true }
description = "Fedimint build script utilities for including git version information in builds"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-build"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "fedimint_build"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
