[package]
name = "fedimint-cli"
version = { workspace = true }
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-cli is a command line interface wrapper for the client library."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/fedimint/fedimint"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = ["tor"]
tor = ["fedimint-client/tor", "fedimint-api-client/tor"]

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[lib]
name = "fedimint_cli"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5.37"
fedimint-aead = { workspace = true }
fedimint-api-client = { path = "../fedimint-api-client", version = "=0.6.0-alpha", default-features = false }
fedimint-bip39 = { workspace = true }
fedimint-client = { path = "../fedimint-client", version = "=0.6.0-alpha", default-features = false }
fedimint-core = { workspace = true }
fedimint-ln-client = { workspace = true, features = ["cli"] }
fedimint-lnv2-client = { workspace = true, features = ["cli"] }
fedimint-logging = { workspace = true }
fedimint-meta-client = { workspace = true, features = ["cli"] }
fedimint-mint-client = { workspace = true }
fedimint-rocksdb = { workspace = true }
fedimint-wallet-client = { workspace = true, features = ["cli"] }
fs-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.36", features = ["formatting"] }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
