[package]
name = "fedimint-cli"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
description = "Fedimint client CLI interface"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = ["tor"]
tor = ["fedimint-client/tor", "fedimint-api-client/tor"]

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[lib]
name = "fedimint_cli"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5.47"
fedimint-aead = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bip39 = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-ln-client = { workspace = true, features = ["cli"] }
fedimint-lnv2-client = { workspace = true, features = ["cli"] }
fedimint-logging = { workspace = true }
fedimint-meta-client = { workspace = true, features = ["cli"] }
fedimint-mint-client = { workspace = true, features = ["cli"] }
fedimint-rocksdb = { workspace = true }
fedimint-wallet-client = { workspace = true, features = ["cli"] }
fs-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.41", features = ["formatting"] }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "ios")))'.dependencies]
tikv-jemallocator = { workspace = true }
