[package]
description = "Fedimint client CLI interface"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "fedimint-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = ["tor", "jemalloc"]
jemalloc = ["fedimint-rocksdb/jemalloc", "dep:tikv-jemallocator"]
tor = ["fedimint-client/tor", "fedimint-api-client/tor"]

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[lib]
name = "fedimint_cli"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
fedimint-aead = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bip39 = { workspace = true }
fedimint-client = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-cursed-redb = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-ln-client = { workspace = true, features = ["cli"] }
fedimint-lnv2-client = { workspace = true, features = ["cli"] }
fedimint-logging = { workspace = true }
fedimint-meta-client = { workspace = true, features = ["cli"] }
fedimint-mint-client = { workspace = true, features = ["cli"] }
fedimint-rocksdb = { workspace = true }
fedimint-wallet-client = { workspace = true, features = ["cli"] }
fs-lock = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "ios", target_os = "android")))'.dependencies]
tikv-jemallocator = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
