[package]
description = "Library for sending transactions to the Fedimint federation."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "fedimint-client-module"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
tor = ["fedimint-api-client/tor"]

[lib]
name = "fedimint_client_module"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bitcoind = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
