[package]
edition = { workspace = true }
name = "fedimint-client-wasm"
version = { workspace = true }
authors = { workspace = true }
description = "fedimint client for wasm"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

# https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[lib]
crate-type = ["cdylib", "rlib"]
name = "fedimint_client_wasm"
path = "src/lib.rs"

[target.'cfg(target_family = "wasm")'.dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-wallet-client = { workspace = true }
futures = { workspace = true }
imbl = { workspace = true }
js-sys = { workspace = true }
rexie = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
lightning-invoice = { workspace = true }
