[package]
authors = { workspace = true }
description = "fedimint client for wasm"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-client-wasm"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lib]
crate-type = ["cdylib", "rlib"]
name = "fedimint_client_wasm"
path = "src/lib.rs"

[target.'cfg(target_family = "wasm")'.dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-client-rpc = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-redb = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { version = "0.3", features = [
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
] }

[lints]
workspace = true
